adding a select picker to the file type fixes #1510

--- a/web/menu.jspf
+++ b/web/menu.jspf
@@ -88,7 +88,7 @@ org.opensolaris.opengrok.web.Util"
     <td>
     <label for="project">Project(s)</label>
     </td>
-    <td>
+    <td colspan="2">
     <select tabindex="8" class="q" id="project"
         name="project" multiple="multiple" size="<%=
         Math.min(15, projectsSize) %>"><%
@@ -134,7 +134,7 @@ org.opensolaris.opengrok.web.Util"
     </td>
     </tr>
     <tr>
-    <td colspan="2" >
+    <td colspan="3" >
     <button tabindex="6" type="button"
         onclick="javascript: selectAllProjects(); return false;"
         >select all</button>
@@ -155,27 +155,27 @@ org.opensolaris.opengrok.web.Util"
     <tbody>
     <tr>
         <td><label for="s1" title="The text token(s) or other fields to be found (lucene query, this is not full text!)">Full&nbsp;Search</label></td>
-        <td><input tabindex="1" class="q" name="q" id="q" type="text" value="<%=
+        <td colspan="2"><input tabindex="1" class="q" name="q" id="q" type="text" value="<%=
                 Util.formQuoteEscape(queryParams.getFreetext()) %>"/></td>
     </tr>
     <tr>
-	    <td><label for="s2" title="Definition of function/variable/class">Definition</label></td>
-        <td><input class="q" tabindex="2" name="defs" id="defs" type="text" value="<%=
+	<td><label for="s2" title="Definition of function/variable/class">Definition</label></td>
+        <td colspan="2"><input class="q" tabindex="2" name="defs" id="defs" type="text" value="<%=
             Util.formQuoteEscape(queryParams.getDefs()) %>"/></td>
     </tr>
     <tr>
         <td><label for="s3" title="Usage of function/variable/class">Symbol</label></td>
-        <td><input class="q" tabindex="3" name="refs" id="refs" type="text" value="<%=
+        <td colspan="2"><input class="q" tabindex="3" name="refs" id="refs" type="text" value="<%=
             Util.formQuoteEscape(queryParams.getRefs()) %>"/></td>
     </tr>
     <tr>
         <td><label for="s4" title="path or parts of it, no need to use dividers">File&nbsp;Path</label></td>
-        <td><input class="q" tabindex="4" name="path" id="path" type="text" value="<%=
+        <td colspan="2"><input class="q" tabindex="4" name="path" id="path" type="text" value="<%=
             Util.formQuoteEscape(queryParams.getPath()) %>"/></td>
     </tr>
     <tr>
         <td><label for="s5" title="Search in log messages">History</label></td>
-        <td><input class="q" tabindex="5" name="hist" id="hist" type="text" value="<%=
+        <td colspan="2"><input class="q" tabindex="5" name="hist" id="hist" type="text" value="<%=
             Util.formQuoteEscape(queryParams.getHist()) %>"/></td>
     </tr>
     <tr>
@@ -194,6 +194,9 @@ org.opensolaris.opengrok.web.Util"
                 }
             %>
             </select>
+        </td>
+        <td id="type-select-container">
+            <!-- filled with javascript -->
         </td>
     </tr>
     </tbody>
