--- a/web/repos.jspf
+++ b/web/repos.jspf
@@ -21,6 +21,7 @@ CDDL HEADER END
 Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
 
 --%>
+<%@page import="org.opensolaris.opengrok.web.Scripts"%>
 <%@page import="org.json.simple.JSONArray"%>
 <%@page import="org.opensolaris.opengrok.configuration.messages.Message"%>
 <%@page import="java.util.SortedSet"%>
@@ -46,15 +47,8 @@ Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
 <%@page import="org.opensolaris.opengrok.web.PageConfig"%>
 <%
 {
-    /**
-     * This file depends on the javascript file repos.js which must be
-     * included after all other scripts. Currently it is included in
-     * index.jsp.
-     *
-     * Without this file the group and project listing will not work.
-     */
-
     PageConfig cfg = PageConfig.get(request);
+    cfg.addScript("repos");
     JSONArray messages;
 
     Util.printMessages(out, cfg.getMessages());
