--- a/web/foot.jspf
+++ b/web/foot.jspf
@@ -55,14 +55,12 @@ org.opensolaris.opengrok.web.Prefix"
     </div>
 </div>
 <%
-    String ctxPath = request.getContextPath();
+    /**
+     * Print out all collected javascript files (or inline script) by the calls
+     * to {@link PageConfig#addScript} methods.
+     */
 %>
-<script type="text/javascript" src="<%= ctxPath %>/js/jquery-3.2.0.min.js"></script>
-<script type="text/javascript" src="<%= ctxPath %>/js/jquery-ui-1.12.0-custom.min.js"></script>
-<script type="text/javascript" src="<%= ctxPath %>/js/jquery.tablesorter-2.26.6.min.js"></script>
-<script type="text/javascript" src="<%= ctxPath %>/js/tablesorter.parsers-0.0.1.js"></script>
-<script type="text/javascript" src="<%= ctxPath %>/js/searchable-option-list-2.0.3.min.js"></script>
-<script type="text/javascript" src="<%= ctxPath %>/js/utils-0.0.9.js"></script>
+    <%= PageConfig.get(request).getScripts() %>
 </body>
 </html>
 <%
