added SearchAllProjects Button
PageConfig.java
1. added getAllRequestedProjects function to return all projects. This is used when seachall projects button is clicked
2. prepareSearch now has a boolean input. this is set to true when all projects is selected and is used to determine if the message "You must select a project!" is to be displayed.
utils-0.0.8.js
added function SearchAll. this is called when selectAllprojects button is clicked. It deselects a) all projects b) sets the hdnsearchall to true and then submits the form
menu.jspf
1. if selectall projects is true, it clears pRequested list to ensure none of the projects are listed
2. SearchAllProjects button is added
3. hidden variable hiddenSearchAll is created to support the SearchAllProjects
projects.jspf
1. resetcookie function to remove cookie PageConfig.OPEN_GROK_PROJECT when searchall projects is clicked
2. if condition added to either call remove cookie or continue with current logic
search.jsp
1. added flag to prepareSearch call. This is used to decide if error message "You must select a project!" is required or not
2. call to search updated with allprojects if that is selected --> cfg.getAllRequestedProjects()

--- a/web/menu.jspf
+++ b/web/menu.jspf
@@ -92,7 +92,9 @@ org.opensolaris.opengrok.web.Util"
     <select tabindex="8" class="q" id="project"
         name="project" multiple="multiple" size="<%=
         Math.min(15, projectsSize) %>"><%
-        SortedSet<String> pRequested = cfg.getRequestedProjects();
+		SortedSet<String> pRequested = cfg.getRequestedProjects();
+		if (request.getParameter("hdnSearchAll") != null && request.getParameter("hdnSearchAll").equals("true"))
+			pRequested.clear(); 
         for ( Group group : ph.getGroups() ) {
             Set<Project> groupProjects = ph.getAllGrouped(group);
             if ( groupProjects.size() > 0) {
@@ -102,7 +104,7 @@ org.opensolaris.opengrok.web.Util"
                 // with F5
 
                 %><option value="<%= p.getName() %>"<%
-                    if (pRequested.contains(p.getName())) {
+                    if (pRequested.contains(p.getName()) ) {
                         %> selected="selected"<%
                     }
                     if (!(messages = Util.messagesToJson(p)).isEmpty()) {
@@ -119,8 +121,8 @@ org.opensolaris.opengrok.web.Util"
         }
         for ( Project p : ph.getAllUngrouped()) {
         %><option value="<%= p.getName() %>"<%
-            if (pRequested.contains(p.getName())) {
-                %> selected="selected"<%
+            if (pRequested.contains(p.getName()) ) {
+			%> selected="selected"<%
             }
             if (!(messages = Util.messagesToJson(p)).isEmpty()) {
                 %> data-messages='<%= messages %>' <%
@@ -202,10 +204,12 @@ org.opensolaris.opengrok.web.Util"
     </tbody>
 </table>
 <div id="form-controls">
+    <input tabindex="9" class="submit btn" type="button" value="Search All Projects" onclick="javascript: SearchAll();"/>
     <input tabindex="9" class="submit btn" type="submit" value="Search"/>
     <input tabindex="10" class="submit btn" onclick="javascript: clearSearchFrom();"
            type="button" value="Clear"/>
     <a href="help.jsp" target="_blank" class="help btn" title="Help" tabindex="11" />Help</a>
+	<input type="hidden" id="hdnSearchAll" name="hdnSearchAll" value="false">
 </div>
 </div>
 <div id="ltbl">
